# taxi-dispatch

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
dispatch/: Dockerfile  alembic.ini  pyproject.toml
dispatch/alembic/: env.py
dispatch/alembic/versions/: 0000_init.py  0001_add_taxi_id_to_trip_table.py  0002_add_trip_pickup_time.py  0003_add_taxi_created_at.py
dispatch/app/: config.py  db.py  dependencies.py  lifespan.py  main.py
dispatch/app/crud/: __init__.py  taxi.py  trip.py
dispatch/app/models/: __init__.py  mixins.py  taxi.py  trip.py
dispatch/app/routers/: event.py  taxi.py  trip.py
dispatch/app/schemas/: event.py  taxi.py  trip.py
dispatch/app/services/: __init__.py  taxi_service.py
dispatch/tests/: conftest.py  test_dispatch.py  test_event.py  test_taxi.py  test_trip.py
dispatch/tests/test_data/: taxi.py  trip.py
taxi/: Dockerfile  pyproject.toml
taxi/app/: config.py  lifespan.py  main.py  state.py
taxi/app/routers/: trip.py
taxi/app/schemas/: trip.py
taxi/tests/: conftest.py  test_state.py  test_taxi.py
traffic_generator/: Dockerfile  main.py  pyproject.toml
