[tool.poetry]
name = "app"
version = "0.1.0"
description = "Dispatch service"
authors = ["Tomasz Marchlewski"]

[tool.poetry.dependencies]
python = "^3.12.10"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
httpx = "^0.28.0"
sqlalchemy = "^2.0.41"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
