[tool.poetry]
name = "app"
version = "0.1.0"
description = "Dispatch service"
authors = ["Tomasz Marchlewski"]

[tool.poetry.dependencies]
python = "^3.12.10"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
httpx = "^0.28.0"
sqlalchemy = "^2.0.41"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.26.0"
anyio = "^4.9.0"
respx = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
