[tool.poetry]
name = "app"
version = "0.1.0"
description = "Dispatch service"
authors = ["Tomasz Marchlewski"]

[tool.poetry.dependencies]
python = "^3.12.10"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
httpx = "^0.28.0"
sqlalchemy = "^2.0.41"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.26.0"
anyio = "^4.9.0"
respx = "^0.22.0"
ruff = "^0.11.10"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
extend-exclude = ["versions"]

[tool.ruff.lint]
select = [
    "E",  # E: pycodestyle
    "F",  # F: pyflakes
    "I",  # I: isort
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
